--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,149 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>Bookers2</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+
+    <header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="/"><span>Bookers</span></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto">
+          <li>
+
+
+  <% if user_signed_in? %>
+    <li>
+      <%= link_to '投稿フォーム', new_user_path %>
+    </li>
+    <li>
+      <%= link_to 'マイページ', user_path(current_user.id) %>    </li>
+    <li>
+      <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+    </li>
+  <% else %>
+    <li>
+      <%= link_to "新規登録", new_user_registration_path %>
+    </li>
+    <li>
+      <%= link_to "ログイン", new_user_session_path %>
+    </li>
+  <% end %>
+
+
+
+
+
+
+            <i class="fas fa-home"></i>
+            <%= link_to "Home","/" %>
+
+
+            <a class="nav-link text-light" href="/">
+              <i class="fas fa-home"></i> Home
+</a>          </li>
+          <li>
+            <a class="nav-link text-light" href="/homes/about">
+              <i class="fas fa-link"></i> About
+</a>          </li>
+          <li>
+            <a class="nav-link text-light" href="/users/sign_up">
+              <i class="fas fa-user-plus"></i> Sign up
+</a>          </li>
+          <li>
+            <a class="nav-link text-light" href="/users/sign_in">
+              <i class="fas fa-sign-in-alt"></i> Log in
+</a>          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
+
+<html>
+  <head>
+
+
+   <header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="/"><span>Bookers</span></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto">
+          <li>
+            <a class="nav-link text-light" href="/users/60336">
+              <i class="fas fa-home"></i> Home
+</a>          </li>
+          <li>
+            <a class="nav-link text-light" href="/users">
+              <i class="fas fa-users"></i> Users
+</a>          </li>
+          <li>
+            <a class="nav-link text-light" href="/books">
+              <i class="fas fa-book-open"></i> Books
+</a>          </li>
+          <li>
+            <a class="nav-link text-light" rel="nofollow" data-method="delete" href="/users/sign_out">
+              <i class="fas fa-sign-out-alt"></i> Log out
+</a>          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
+
+<html>
+  <head>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+    <main>
+      <%= yield %>
+    </main>
+
+
+<html>
+  <head>
+
+    <meta name="csrf-param" content="authenticity_token" />
+<meta name="csrf-token" content="IBVcJb_LjsoxS-LIwg6lekVeZTTOBYdNoYjXZhMU1N6Ks-LIS1TXPDEOUL5hbPw_pPG2tkp__va1Y7A2fXj9MA" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" media="all" href="/packs/css/application-859f38f5.css" data-turbolinks-track="reload" />
+    <script src="/packs/js/application-8c498bd08fe3c47f4c35.js" data-turbolinks-track="reload"></script>
+  </head>
   <body>
-    <%= yield %>
+
+
+
+      <main>
+
+        <div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-3'>
+
+      </main>
+    <footer>
+  <div class='container mt-5'>
+   <div class='row'>
+     <div class='mx-auto'>
+      <p>CopyRight Infratop.inc</p>
+     </div>
+    </div>
+  </div>
+</footer>
+
   </body>
 </html>
