--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -1,57 +1,75 @@
- <p id="notice"></p>
-        <div class='container px-5 px-sm-0'>
+  <p id="notice"></p>
+    <p id="alert"></p>
+  <div class='container px-5 px-sm-0'>
   <div class='row'>
-    <div class='col-md-3'>
-
-      <h2>User info</h2>
-
-      <% if @user.image.attached? %>
- 
-    <td><%= image_tag book.image, size: "100x100" %></td>
-  <% else %>
-    <td><%= image_tag 'no_image', size: "100x100" %></td>
-  <% end %>
-
-    <div class='col-md-8 offset-md-1'>
-
-      <table class="table table-striped">
-
- <thead>
+  <div class='col-md-3'>
 
 
-         <main>
-        <p id="notice"></p>
-        <div class='container px-5 px-sm-0'>
-  <div class='row'>
-    <div class='col-md-3'>
 
-      <table class='table'>
-	<tr>  <th>name</th>
-	 <th> <%= link_to current_user.name, user_path(current_user) %></th>
-  </tr>
-  
+
+
+
+  <h2>User info</h2>
+
+
+ <% if current_user %>
+  <div class="profile-container">
+      
+      
+  <div class='col-md-8 offset-md-1'>
+  <table class="table table-striped">
+  <thead>
+
+   <main>
+   <p id="notice"></p>
+   <div class='container px-5 px-sm-0'>
+   <div class='row'>
+   <div class='col-md-3'>
+
+   <table class='table'>
+   <tr>  <h5 class="profile-name"><%= current_user.name %></h5>
+   <th>name       </th>
+   </tr><h3 class="profile-introduction"><%= current_user.introduction %></h3>
   <tr>
-	  <th>introduction</th>
-	  <th></th>
+	 <th>introduction </th>
+	 <th></th>
   </tr>
-</table>
+  </table>
 
- </thead>
+  </thead>
 
-
-</table>
+  </table>
   </div>
-<div class='row'>
+  
+  
+  
+ 
+  <h2>User info</h2>
+  
+  
+  <p><%= link_to "プロフィール編集", edit_user_path(current_user), class: "pull-right" %></p>
+  </div>
+ <% end %>
+ 
+ 
+  <div class='row'>
   <a class="btn btn-secondary btn-lg edit_user_2" href="/users/2/edit">
-    <i class="fas fa-user-cog"></i>
-</a></div>
+  <i class="fas fa-user-cog"></i>
+  </a></div>
 
-    <h2>New book</h2>
-<%= form_with model: @user do |f| %>
 
-   <h6>Title</h6>
-  <%= f.text_field :title %>
-   <h6>Opinion</h6>
-  <%= f.text_area :body %>
-  <%= f.submit "create book" %>
-  <% end %>
+
+
+
+
+ <h2>New book</h2>
+ <%= form_with model:book do |f| %>
+
+ <h6>Title</h6>
+ <%= f.text_field :title %>
+
+ <h6>Opinion</h6>
+ <%= f.text_area :body %>
+
+ <%= f.submit "create book" %>
+ <% end %>
