--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,20 @@
 
+<% if flash[:notice] %>
+     <p id="notice">
+       <%= flash[:notice] %>
+     </p>
+   <% end %>
+
+
+
+<% if @book.errors.any? %>
+  <h3><%= @book.errors.count %>errors prohibited this obj from being saved:
+<ul></h3><% @book.errors.full_messages.each do |message| %>
+<li><%= message %></li>
+<% end %>
+</ul>
+<% end %>
+
 
 <h1>User info</h1>
 
@@ -7,11 +23,11 @@
 
   <tr>
   <th>name</th>
-  	 <th> <%= link_to current_user.name, user_path(current_user) %></th>
+
   </tr>
   <th>introduction</th>
   <th colspan="3"></th>
-  </tr>
+
   </thead>
 
   </tbody>
@@ -27,6 +43,7 @@
 
 
 <%= form_with model: @book do |f| %>
+
 
   <h4>title</h4>
   <%= f.text_field:title %>
@@ -46,27 +63,22 @@
       <th>Title</th>
       <th></th>
       <th>Opinion</th>
-      
+
       <th colspan="3"></th>
     </tr>
   </thead>
+
   <tbody>
-
-
-
   <% @books.each do |book| %>
-   <% if book.image.attached? %>
-    <td><%= image_tag book.image, size: "100x100" %></td>
-  <% else %>
-    <td><%= image_tag 'no_image', size: "100x100" %></td>
-  <% end %>
-  
+
+
   <td><%= book.body %></td>
- <td><%= link_to "Show", book_path(book.id)%>
-  </td>
+  <td><%= link_to "Show", book_path(book.id)%></td>
 
-  </tr>
 
-<% end %>
-</tbody>
-</table>
+
+  <% end %>
+
+
+  </tbody>
+  </table>
