--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,14 +1,18 @@
+<% if flash[:notice] %>
+<p id="notice">
+ <%= flash[:notice] %> </p>
+   <% end %>
 
 
-<%= render 'users/list', users: @users %>
+<%= render 'users/list', users: @user,book: @book %>
+
+
+
 
 
 <div>
-  <% if @book.user == current_user %>
-    <%= link_to "削除", book_path(@book), method: :delete %>
-  <% end %></div>
-<div>
 
+<tr>
 
       <h2>Book detail</h2>
       <table class='table table-hover table-inverse'>
@@ -16,37 +20,28 @@
   <tbody>
   <% @books.each do |book| %>
 
-<tr>
- <% if book.image.attached? %>
-    <td><%= image_tag book.image, size: "100x100" %></td>
-  <% else %>
-    <td><%= image_tag 'no_image', size: "100x100" %></td>
   <% end %>
 
 
- <td><%=link_to book.title, book_path(book.id) %></td>
+  <td><%=link_to books_path(@book.id) %></td>
 
 
-  <td><%= book.body %></td>
- <td><%= link_to "Show", book_path(book.id)%>
+  <td><%= @book.body %></td>
+  <td><%= link_to "Show", book_path(@books)%>
   </td>
   <td>
-    <%= link_to "Edit", edit_user_path(book.id)%>
+  <%= link_to "Edit", edit_book_path(@books)%>
   </td>
   <td>
-    <%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
+    <%= link_to "Destroy", book_path(@book), method: :delete, "data-confirm" => "Are you sure?" %>
 
   </td>
   </tr>
 
-<% end %>
 
-  </tbody>
+
+</tbody>
 </table>
-    </div>
-  </div>
 </div>
-
-
 
 
