--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,25 +1,57 @@
-<% provide(:title, "Edit user") %>
-<h1>User info</h1>
+<html>
+<body>
+<main>
+<p id="notice"></p>
+<div class='container'>
+<div class='row'>
+<div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+
+
+<h2>User info</h2>
+
+<% if @user.errors.any? %>
+<h3><%= @user.errors.count %>errors prohibited this obj from being saved:
+<ul></h3><% @user.errors.full_messages.each do |message| %>
+<li><%= message %></li>
+<% end %>
+</ul>
+<% end %>
+
 
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user) do |f| %>
-
-
-      <%= f.label :Name %>
-      <%= f.text_field :name, class: 'form_control' %>
-
-      <%= f.label :Introduction %>
-      <%= f.text_field :introduction, class: 'form_control' %>
-
-
-      <%= f.submit "Update User", class: "btn btn-primary" %>
-    <% end %>
-
-    <div class="gravatar_edit">
-
-
-    </div>
-  </div>
+<div class="col-md-6 col-md-offset-3">
+<%= form_for (@user) do |f| %>
+<% end %>
+<div class="gravatar_edit">
+</div>
+</div>
 </div>
 
+<%= form_with model: @user do |f| %>
+<label for="inputName">Name</label>
+<%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
+
+<br><label for="inputImage">Image</label>
+<%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
+
+<br><%= f.label :Introduction %>
+<%= f.text_field :introduction, class: 'form_control' %>
+<br> <%= f.submit "Update User" %>
+<% end %>
+
+
+<% if @user.id == current_user.id %>
+<%= link_to edit_user_path(current_user.id) do %>
+<div class= " edit btn btn-outline-secondary btn-default btn-block" ><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span></div>
+<% end %>
+        <% end %>
+
+
+</div>
+</div>
+</div>
+
+
+</main>
+</body>
+</html>
