--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,41 +1,35 @@
 
-<%= render 'users/list', users: @users %>
+
+<%= render 'users/list', users: @user,book: @book %>
 
 
-    <div class='col-md-8 offset-md-1'>
+    <div class='col-md-8 offset-md-1'></div>
       <h2>Users</h2>
       <table class='table table-hover table-inverse'>
   <thead>
+    
+   
     <tr>
       <th></th>
       <th>image</th>
       <th></th>
       <th>name</th>
-      <th> <%= link_to current_user.name, user_path(current_user) %></th>
+<th><%= @user.name %></th>
+
       <th colspan="3"></th>
     </tr>
   </thead>
+  <tr>
   <tbody>
+  
   <% @users.each do |user| %>
 
-<tr>
- <% if user.image.attached? %>
-    <td><%= image_tag book.image, size: "200x200" %></td>
-  <% else %>
-    <td><%= image_tag 'no_image', size: "200x200" %></td>
   <% end %>
 
 
- <td><%= link_to "Show", user_path(user.id)%>
+ <td><%= link_to "Show", book_path(@books)%>
   </td>
   </tr>
 
-<% end %>
-
   </tbody>
 </table>
-    </div>
-  </div>
-</div>
-
-
