--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,61 +1,56 @@
+<% if flash[:notice] %>
+<p id="notice">
+ <%= flash[:notice] %> </p>
+   <% end %>
 
-<%= render 'users/list', users: @users %>
+
+ <body>
+<p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+  <%= yield %>
+  </body>
+  
+<%= render 'users/list', users: @users, book: @book %>
 
 
-
-    <div class='col-md-8 offset-md-1'>
-      <h2>Books</h2>
-      <table class='table table-hover table-inverse'>
+  <div class='col-md-8 offset-md-1'>
+  <h2>Books</h2>
+  <table class='table table-hover table-inverse'>
   <thead>
-    <tr>
-      <th></th>
-      <th>Title</th>
-      <th>Opinion</th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+  <th></th>
+  <th>Title</th>
+  <th>Opinion</th>
+  <th colspan="3"></th>
+  </tr>
   </thead>
+  
+  <tr>
   <tbody>
   <% @books.each do |book| %>
-
-<tr>
- <% if book.image.attached? %>
-    <td><%= image_tag book.image, size: "200x200" %></td>
-  <% else %>
-    <td><%= image_tag 'no_image', size: "200x200" %></td>
-  <% end %>
-
-    <td><%=link_to book.title, book_path(book.id) %></td>
-
-
+     <td><%=link_to books_path %></td>
+  
+  
   <td><%= book.body %></td>
- <td><%= link_to "Show", book_path(book.id)%>
+  
+  <td><%= link_to "Show", book_path(book.id)%>
   </td>
   <td>
-    <%= link_to "Edit", edit_user_path(book.id)%>
+  <%= link_to "Edit", edit_user_path(book.id)%>
   </td>
   <td>
-    <%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
-
+  <%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
   </td>
+  <% end %>
+  
   </tr>
 
-<% end %>
 
   </tbody>
-</table>
-    </div>
+  </table>
   </div>
-</div>
-
-
-<!-- ユーザーの詳細 -->
-<div class="profile-container">
-  <h3 class="profile-name"><%= @user.name %></h3>
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <% if @user.id == current_user.id %>
-  <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+  </div>
+  </div>
+  
+  <% @books.each do |book| %>
   <% end %>
-</div>
-
-<!-- ユーザーの投稿一覧 -->
-<%= render 'post_images/list', post_images: @post_images %>
