--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,8 @@
  *= require_tree .
  *= require_self
  */
+
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
+
+@import "@fortawesome/fontawesome-free/scss/fontawesome";
