--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,84 +1,61 @@
-
-<% if flash[:notice] %>
-     <p id="notice">
-       <%= flash[:notice] %>
-     </p>
-   <% end %>
-
-
-
-<% if @book.errors.any? %>
-  <h3><%= @book.errors.count %>errors prohibited this obj from being saved:
-<ul></h3><% @book.errors.full_messages.each do |message| %>
+<% if @users.errors.any? %>
+<h3><%= @user.errors.count %>errors prohibited this obj from being saved:
+<ul></h3><% @user.errors.full_messages.each do |message| %>
 <li><%= message %></li>
 <% end %>
 </ul>
 <% end %>
 
 
-<h1>User info</h1>
-
- <table>
-  <thead>
-
-  <tr>
-  <th>name</th>
-
-  </tr>
-  <th>introduction</th>
-  <th colspan="3"></th>
-
-  </thead>
-
-  </tbody>
-</table>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-3'>
+  <%= render 'users/list', user: @user,book: @book %>
   </div>
-<div class='row'>
-  <a class="btn btn-secondary btn-lg edit_user_2" href="/users/2/edit">
-    <i class="fas fa-user-cog"></i>
-</a></div>
-
-
-<h1>New book</h1>
-
-
-<%= form_with model: @book do |f| %>
-
-
-  <h4>title</h4>
-  <%= f.text_field:title %>
-  <h4>body</h4>
-  <%= f.text_area:body %>
-  <p><%= f.submit 'Create Book' %></p>
-<% end %>
-
-
 
   <div class='col-md-8 offset-md-1'>
+
+
+
+
       <h2>Books</h2>
       <table class='table table-hover table-inverse'>
   <thead>
     <tr>
       <th></th>
+
       <th>Title</th>
-      <th></th>
       <th>Opinion</th>
-
       <th colspan="3"></th>
-    </tr>
-  </thead>
+      </tr>
+        </thead>
+   <tbody>
+  <% @user.each do |user| %>
+  <tr>
+     <td><% if @user.profile_image.attached? %></td>
+     <td>><%= f.file_field :image, accept: "image/*" %></td>
+     <td><%= image_tag book.image, size: "100x100" %></td>
+      <% else %>
+      <td><%= image_tag 'no_image', size: "100x100" %></td>
+      <% end %>
+ <p>投稿ユーザー画像：<%= image_tag book.user.get_profile_image(100,100) %></p>
+  <td><%= book.title %></td>
 
-  <tbody>
-  <% @books.each do |book| %>
 
 
+  <td><a class="book_2" href="/books/2">Title</a></td>
   <td><%= book.body %></td>
-  <td><%= link_to "Show", book_path(book.id)%></td>
-
-
-
-  <% end %>
-
-
+  </tr>
+   <% end %>
   </tbody>
-  </table>
+
+
+</table>
+
+</div>
+</div>
+</div>
+
+
+
+
