--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,47 +1,31 @@
-<% if flash[:notice] %>
-<p id="notice">
- <%= flash[:notice] %> </p>
-   <% end %>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-3'>
+      
+      <%= render 'users/list', user: @user, book: @book %>
+    </div>
 
-
-<%= render 'users/list', users: @user,book: @book %>
-
-
-
-
-
-<div>
-
-<tr>
-
-      <h2>Book detail</h2>
+    <div class='col-md-8 offset-md-1'>
+     <h2>Book detail</h2>
       <table class='table table-hover table-inverse'>
+      <thead>
+        <tr>
+          <th></th>
+    
+        </tr>
+      </thead>
+      <tbody>
+      <tr>
 
-  <tbody>
-  <% @books.each do |book| %>
+        <% if @book.profile_image.attached? %>
+        
+        <% end %>
+<p>投稿ユーザー画像：<%= image_tag @book.user.get_profile_image(100,100) %></p>
+        <td></td>
+      </tr>
+      </tbody>
+      </table>
 
-  <% end %>
-
-
-  <td><%=link_to books_path(@book.id) %></td>
-
-
-  <td><%= @book.body %></td>
-  <td><%= link_to "Show", book_path(@books)%>
-  </td>
-  <td>
-  <%= link_to "Edit", edit_book_path(@books)%>
-  </td>
-  <td>
-    <%= link_to "Destroy", book_path(@book), method: :delete, "data-confirm" => "Are you sure?" %>
-
-  </td>
-  </tr>
-
-
-
-</tbody>
-</table>
+    </div>
+  </div>
 </div>
-
-
