--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -32,7 +32,8 @@
 <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
 
 <br><label for="inputImage">Image</label>
-<%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
+
+<%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "pimage/*" %>
 
 <br><%= f.label :Introduction %>
 <%= f.text_field :introduction, class: 'form_control' %>
