--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,35 +1,45 @@
 
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-3'>
+      <%= render 'users/list', user: @user, book: @book %>
+     </div>
 
-<%= render 'users/list', users: @user,book: @book %>
-
-
-    <div class='col-md-8 offset-md-1'></div>
-      <h2>Users</h2>
+    <div class='col-md-8 offset-md-1'>
+     <h2>Users</h2>
       <table class='table table-hover table-inverse'>
-  <thead>
-    
-   
-    <tr>
-      <th></th>
-      <th>image</th>
-      <th></th>
-      <th>name</th>
-<th><%= @user.name %></th>
+      <thead>
+        <tr>
+          <th>image</th>
+          
+          <th>name</th>
+          <th></th>
+          <th></th>
+          <th colspan="3"></th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
 
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tr>
-  <tbody>
+        <% if @book.profile_image.attached? %>
+          <%= f.file_field :image, accept: "image/*" %>
+          <td><%= image_tag book.image, size: "100x100" %></td>
+          <% else %>
+          <td><%= image_tag 'no_image', size: "100x100" %></td>
+        <% end %>
+
+        <td><%= @user.name %></td>
+        
+        <td><% @users.each do |user| %>
+        <% end %></td>
   
-  <% @users.each do |user| %>
+<td><%= link_to "Show", book_path(@books)%></td>
 
-  <% end %>
+         </tr>
+       </tbody>
+   </table>
 
-
- <td><%= link_to "Show", book_path(@books)%>
-  </td>
-  </tr>
-
-  </tbody>
-</table>
+</div>
+</tbody>
+</div>
+</div>
