--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,61 +1,41 @@
-<% if @users.errors.any? %>
-<h3><%= @user.errors.count %>errors prohibited this obj from being saved:
-<ul></h3><% @user.errors.full_messages.each do |message| %>
+<% if @book.errors.any? %>
+<h3><%= @book.errors.count %>errors prohibited this obj from being saved:
+<ul></h3><% @book.errors.full_messages.each do |message| %>
 <li><%= message %></li>
 <% end %>
 </ul>
 <% end %>
-
-
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-3'>
-  <%= render 'users/list', user: @user,book: @book %>
-  </div>
-
-  <div class='col-md-8 offset-md-1'>
-
-
-
-
-      <h2>Books</h2>
-      <table class='table table-hover table-inverse'>
-  <thead>
-    <tr>
-      <th></th>
-
-      <th>Title</th>
-      <th>Opinion</th>
-      <th colspan="3"></th>
-      </tr>
-        </thead>
-   <tbody>
-  <% @user.each do |user| %>
-  <tr>
-     <td><% if @user.profile_image.attached? %></td>
-     <td>><%= f.file_field :image, accept: "image/*" %></td>
-     <td><%= image_tag book.image, size: "100x100" %></td>
-      <% else %>
-      <td><%= image_tag 'no_image', size: "100x100" %></td>
-      <% end %>
- <p>投稿ユーザー画像：<%= image_tag book.user.get_profile_image(100,100) %></p>
-  <td><%= book.title %></td>
-
-
-
-  <td><a class="book_2" href="/books/2">Title</a></td>
-  <td><%= book.body %></td>
-  </tr>
-   <% end %>
-  </tbody>
-
-
-</table>
-
-</div>
-</div>
-</div>
-
-
-
-
+      <%= render 'users/info', user: @user, book: @book %>
+      </div>
+      <div class='col-md-8 offset-md-1'>
+        <h2>Books</h2>
+        <table class='table table-hover table-inverse'>
+          <thead>
+            <tr>
+              <th></th>
+              <th>Title</th>
+              <th>Opinion</th>
+              <th colspan="3"></th>
+              </tr>
+              </thead>
+              <tbody>
+                <% @books.each do |book| %>
+                <% if book.user.profile_image.attached? %>
+                <%#= f.file_field :profile_image, accept: "image/*" %>
+                <td><%= image_tag book.user.profile_image, size: "100x100" %></td>
+                <% else %>
+                <td><%= image_tag 'no_image', size: "100x100" %></td>
+                <% end %>
+                <td><%= link_to book_path(book), method: :get do %>
+                <%= book.title %>
+                <% end %></td>
+                <td><%= book.body %></td>
+                </tbody>
+                <% end %>
+                </table>
+                </div>
+                </div>
+                </div>
