--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,32 +1,28 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-3'>
-      <%= render 'users/list', user: @user, book: @book %>
-    </div>
+      <%= render 'users/info', user: @user, book: @book %>
+      </div>
+      <div class='col-md-8 offset-md-1'>
+        <h2>Books</h2>
+        <table class='table table-hover table-inverse'>
+          <thead>
+            <tr>
+              <th></th>
+              <th>Title</th>
+              <th>Opinion</th>
+              <th colspan="3"></th>
+              </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <% if @users.profile_image.attached? %>
+                  <% end %>
+                  <td></td>
+                  </tr>
+                  </tbody>
+                  </table>
+                  </div>
+                  </div>
+                  </div>
 
-    <div class='col-md-8 offset-md-1'>
-     <h2>Books</h2>
-      <table class='table table-hover table-inverse'>
-      <thead>
-        <tr>
-          <th></th>
-          <th>Title</th>
-          <th>Opinion</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
-      <tbody>
-      <tr>
-
-        <% if @book.profile_image.attached? %>
-        
-        <% end %>
-
-        <td></td>
-      </tr>
-      </tbody>
-      </table>
-
-    </div>
-  </div>
-</div>
