--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,25 +1,44 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-3'>
-      <%= render 'users/info', user: @user, book: @book %>
+      <%= render 'users/info', user: @user, book: @book_new %>
       </div>
       <div class='col-md-8 offset-md-1'>
         <h2>Book detail</h2>
         <table class='table table-hover table-inverse'>
-          <thead>
+          <tbody>
             <tr>
-              <th></th>
-              </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <% if @user.profile_image.attached? %>
-                  <% end %>
-                  <td></td>
-                  </tr>
-                  </tbody>
-                  </table>
-                  </div>
-                  </div>
-                  </div>
 
+              <td><%= link_to user_path(@book.user), method: :get do %>
+                  <%= image_tag @book.user.get_profile_image(100,100) %><br>
+                  　<%= @book.user.name %>
+              <% end %>
+              </td>
+
+
+                  <td><%= link_to book_path(@book), method: :get do %>
+                  <%= @book.title %>
+                  <td><%= @book.body %></td>
+                  <% end %></td>
+
+
+                    <td><p><%= link_to edit_user_path(@user) do%></p>
+                    <% end %>
+                    </td>
+                    <td><p><%= link_to book_path(@book) do%></p>
+                    <% end %>
+                    </td>
+                     <td><% if @book.user == current_user %>
+                      </td>
+                     <td><%= link_to "Edit", edit_book_path(@book)%>
+                    </td>
+                    <td><%= link_to "Destroy", book_path(@book), method: :delete , "data-confirm" => "本当に消しますか？" %>
+                      </td>
+                    <% end %>
+
+                          </tr>
+                          </tbody>
+                          </table>
+                          </div>
+                          </div>
+                          </div>
