--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,34 +8,36 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-3'>
-      <%= render 'users/info', user: @user, book: @book %>
-      </div>
-      <div class='col-md-8 offset-md-1'>
-        <h2>Books</h2>
-        <table class='table table-hover table-inverse'>
-          <thead>
+      <%= render 'users/info', user: current_user, book: @book %>
+    </div>
+    <div class='col-md-8 offset-md-1'>
+      <h2>Books</h2>
+      <table class='table table-hover table-inverse'>
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
             <tr>
-              <th></th>
-              <th>Title</th>
-              <th>Opinion</th>
-              <th colspan="3"></th>
-              </tr>
-              </thead>
-              <tbody>
-                <% @books.each do |book| %>
-                <% if book.user.profile_image.attached? %>
-                <%#= f.file_field :profile_image, accept: "image/*" %>
-                <td><%= image_tag book.user.profile_image, size: "100x100" %></td>
-                <% else %>
-                <td><%= image_tag 'no_image', size: "100x100" %></td>
-                <% end %>
-                <td><%= link_to book_path(book), method: :get do %>
-                <%= book.title %>
-                <% end %></td>
+              <% if book.user.profile_image.attached? %>
+                <td><%= image_tag book.user.get_profile_image(100,100) %></td>
+
+                <td>
+                  <%= link_to book_path(book), method: :get do %>
+                    <%= book.title %>
+                  <% end %>
+                </td>
                 <td><%= book.body %></td>
-                </tbody>
-                <% end %>
-                </table>
-                </div>
-                </div>
-                </div>
+              <% end %>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
