--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -1,26 +1,23 @@
-<p id="notice"></p>
-<h2>User info</h2>
-<% if book.user.profile_image.attached? %>
-<%#= f.file_field :image, accept: "image/*" %>
-<%= image_tag user.profile_image, size: "100x100" %>
-<% else %>
-<%= image_tag 'no_image', size: "100x100" %>
-<% end %>
-<table class='table table-hover table-inverse'>
+ <p id="notice"></p>
+ <h2>User info</h2>
+
+ <%= image_tag user.get_profile_image(100,100) %>
+
+ <table class='table table-hover table-inverse'>
  <tr>
   <td>name</td>
-  <td><%= current_user.name %></td>
-  </tr>
+   <td><%= @user.name %></td>
+   </tr>
   <tr>
    <td>introduction</td>
-   <td><%= current_user.introduction %></td>
+   <td><%= @user.introduction %></td>
    </tr>
    </table>
    <div class='row'>
-    <%= link_to edit_user_path(current_user.id) do %>
+    <%= link_to edit_user_path(user.id) do %>
     <i class="fas fa-user-cog"></i>
     <% end %></div>
-   
+
     <h2>New book</h2>
     <%= form_with model:book do |f| %>
     <h6>Title</h6>
@@ -29,5 +26,4 @@
     <%= f.text_area :body %>
     <%= f.submit "create book" %>
     <% end %>
-    
-    
+
