--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-3'>
-      <%= render 'users/info', user: @user, book: @book %>
+      <%= render 'users/info', user: @user,book: @book %>
       </div>
       <div class='col-md-8 offset-md-1'>
         <h2>Users</h2>
@@ -11,28 +11,26 @@
               <th>image</th>
               <th>name</th>
               <th></th>
-              <th></th>
               <th colspan="3"></th>
               </tr>
               </thead>
               <tbody>
                 <tbody>
-                  <tr>
-                    <% if @user.profile_image.attached? %>
-                    <%#= f.file_field :image, accept: "image/*" %>
-                    <td><%= image_tag @user.profile_image, size: "100x100" %></td>
-                    <% else %>
-                    <td><%= image_tag 'no_image', size: "100x100" %></td>
+
+                    <% @users.each do |user| %>
+                      <tr>
+                        <% if user.profile_image.attached? %>
+                          <td><%= image_tag user.get_profile_image(100,100) %></td>
+                          <td><%= user.name %></td>
+                            <td>
+                              <%= link_to "Show", user_path(user) %>
+                            </td>
+                        <% end %>
+                      </tr>
                     <% end %>
-                    <td><%= @user.name %></td>
-                    <td><% @users.each do |user| %>
-                    <% end %></td>
-                    <td><%= link_to "Show", book_path(@books)%></td>
-                    </tr>
                     </tbody>
                     </table>
                     </div>
                     </tbody>
                     </div>
                     </div>
-                    
