--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-3'>
-      <%= render 'users/info', user: @user, book: @book %>
+      <%= render 'users/info', user: current_user, book: @book_new %>
       </div>
       <div class='col-md-8 offset-md-1'>
         <h2>Books</h2>
@@ -14,15 +14,28 @@
               <th colspan="3"></th>
               </tr>
               </thead>
-              <tbody>
-                <tr>
-                  <% if @users.profile_image.attached? %>
+　　　　　　　　　
+                  <tbody>
+                <tbody>
+                   <% @book.each do |book| %>
+                  <tr>
+                     <td><%= image_tag @user.get_profile_image(100,100) %></td>
+                   <td><%= link_to book_path(book), method: :get do %>
+                  <%= book.title %>
                   <% end %>
-                  <td></td>
+                  </td>
+                    <td><%= book.body %></td>
+                    </tr>
+                    <% end %>
+                    </tbody>
+                    </table>
+                    </div>
+                    </tbody>
+                    <tbody>
+                <tr>
                   </tr>
                   </tbody>
-                  </table>
                   </div>
                   </div>
-                  </div>
+
 
