--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,22 +23,25 @@
                   </thead>
                   <tbody>
                     <% @books.each do |book| %>
-                    <tr>
-                      <% if book.user.profile_image.attached? %>
-                      <td><%= image_tag book.user.get_profile_image(100,100) %></td>
-                      <td>
-                        <%= link_to book_path(book), method: :get do %>
-                        <%= book.title %>
+                      <tr>
+                        <% if book.user.profile_image.attached? %>
+                          <td>
+                            <%= link_to user_path(book.user) do %>
+                              <%= image_tag book.user.get_profile_image(100,100) %>
+                            <% end %>
+                          </td>
+                          <td>
+                            <%= link_to book_path(book) do %>
+                              <%= book.title %>
+                            <% end %>
+                          </td>
+                          <td><%= book.body %></td>
                         <% end %>
-                        </td>
-                        <td><%= book.body %></td>
-                        <% end %>
-                        </tr>
-                        <% end %>
+                      </tr>
+                    <% end %>
                         </tbody>
                         </table>
                         </div>
                         </div>
                         </div>
-                        
-                        
+
