--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -3,30 +3,26 @@
 
  <%= image_tag user.get_profile_image(100,100) %>
 
+
+
  <table class='table table-hover table-inverse'>
  <tr>
   <td>name</td>
-   <td><%= @user.name %></td>
+   <td><%= user.name %></td>
    </tr>
   <tr>
    <td>introduction</td>
-   <td><%= @user.introduction %></td>
+   <td><%= user.introduction %></td>
    </tr>
    </table>
 
   <div class='row'>
-   <td><% if @user.id == current_user.id %>
-    <%= link_to edit_user_path(current_user.id) do %>
-    <i class="fas fa-user-cog"></i>
+   <td>
+    <%= link_to edit_user_path(user) do %>
+     <i class="fas fa-user-cog"></i>
     <% end %>
-    <% else %>
-     <%= link_to user_path(current_user.id) do %>
-    <i class="fas fa-user-cog"></i>
-    <% end %>
-  <% end %></td>
-
-
-    </div>
+   </td>
+  </div>
 
 
     <h2>New book</h2>
@@ -35,6 +31,6 @@
     <%= f.text_field :title %>
     <h6>Opinion</h6>
     <%= f.text_area :body %>
-    <%= f.submit "create book" %>
+    <%= f.submit "Create Book" %>
     <% end %>
 
