--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,17 +20,17 @@
                     <% @users.each do |user| %>
                       <tr>
                         <% if user.profile_image.attached? %>
+                        
                           <td><%= image_tag user.get_profile_image(100,100) %></td>
                           <td><%= user.name %></td>
                             <td>
-                              <%= link_to "Show", user_path(user) %>
-                            </td>
-                        <% end %>
-                      </tr>
-                    <% end %>
-                    </tbody>
-                    </table>
-                    </div>
-                    </tbody>
-                    </div>
-                    </div>
+                              <%= link_to "Show", user_path(user) %></td>
+                              <% end %></tr>
+                              <% end %>
+                              </tbody>
+                              </table>
+                              </div>
+                              </tbody>
+                              </div>
+                              </div>
+
