--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-3'>
-      <%= render 'users/info', user: current_user, book: @book_new %>
+      <%= render 'users/info', user: @user, book: @book_new %>
       </div>
       <div class='col-md-8 offset-md-1'>
         <h2>Books</h2>
@@ -14,13 +14,16 @@
               <th colspan="3"></th>
               </tr>
               </thead>
-　　　　　　　　　
                   <tbody>
                 <tbody>
                    <% @book.each do |book| %>
                   <tr>
-                     <td><%= image_tag @user.get_profile_image(100,100) %></td>
-                   <td><%= link_to book_path(book), method: :get do %>
+                     <td>
+                       <%= link_to user_path(book.user) do %>
+                         <%= image_tag book.user.get_profile_image(100,100) %>
+                       <% end %>
+                     </td>
+                     <td><%= link_to book_path(book), method: :get do %>
                   <%= book.title %>
                   <% end %>
                   </td>
@@ -31,12 +34,6 @@
                     </table>
                     </div>
                     </tbody>
-                    <tbody>
-                      <tr>
-                        
-                      </tr>
-                      </tbody>
+
                       </div>
                       </div>
-
-
